mentions: fix z-index

--- a/app/client/stylesheets/components/pu-input-mentions.sass
+++ b/app/client/stylesheets/components/pu-input-mentions.sass
@@ -1,6 +1,7 @@
 .pu-input-mentions
     &-wrap
         position: relative
+        z-index: 1
 
         > input
             position: relative
